--- a/src/index.html
+++ b/src/index.html
@@ -280,7 +280,7 @@
   <section class="section">
     <div class="slideshow__container category-slideshow is-fullscreen">
       <div class="slide is-fullscreen collection">
-        <div class="block img__container has-hover-scaling has-backdrop has-bg-img is-fullscreen">
+        <div class="block img__container has-hover-scaling has-backdrop has-bg-img is-fullheight">
           <img
             src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_750x750_crop_center.jpg?v=1594627276%20750w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1000x.jpg?v=1594627276%201000w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1500x.jpg?v=1594627276%201500w"
             alt="" class="img is-fullheight is-fullwidth" />
@@ -291,7 +291,7 @@
         </div>
       </div>
       <div class="slide is-fullscreen collection">
-        <div class="block img__container has-backdrop has-bg-img is-fullscreen">
+        <div class="block img__container has-backdrop has-bg-img is-fullheight">
           <img
             src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_750x750_crop_center.jpg?v=1594627276%20750w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1000x.jpg?v=1594627276%201000w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1500x.jpg?v=1594627276%201500w"
             alt="" class="img is-fullheight is-fullwidth" />
@@ -302,7 +302,7 @@
         </div>
       </div>
       <div class="slide is-fullscreen collection">
-        <div class="block img__container has-backdrop has-bg-img is-fullscreen">
+        <div class="block img__container has-backdrop has-bg-img is-fullheight">
           <img
             src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_750x750_crop_center.jpg?v=1594627276%20750w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1000x.jpg?v=1594627276%201000w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1500x.jpg?v=1594627276%201500w"
             alt="" class="img is-fullheight is-fullwidth" />
@@ -326,9 +326,9 @@
     </header>
     <main class="section__body container shop-the-look">
       <div class="shop-the-look__item">
-        <div class="block has-bg-img is-fullscreen has-backdrop">
+        <div class="block has-bg-img is-fullheight has-backdrop shop-the-look__img">
           <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/shop-hair_700x.progressive.jpg?v=1594801444"
-            alt="" class="img is-fullheight is-fullwidth">
+            alt="" class="img is-fullheight">
           <label title="View product" for="toggle-view" style="top: 60%; left:20%" class="image__link-anchor">
           </label>
           <span title="View product" style="top: 70%; left:60%" class="image__link-anchor">
