--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
           </svg>
         </span>
       </div>
-      <div class="sidebar__nav__wrapper">
+      <div class="nav__wrapper">
         <div class="container sidebar__nav">
           <div class="nav__item collapsible" tabindex="0">
-            <p class="nav__item__label collapse-trigger" tabindex="0">
+            <p class="item__label collapse-trigger" tabindex="0">
               <span class="heading h6">skin care</span>
               <span class="collapse__marker">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus"
@@ -54,7 +54,7 @@
             </div>
           </div>
           <div class="nav__item collapsible" tabindex="0">
-            <p class="nav__item__label collapse-trigger" tabindex="0">
+            <p class="item__label collapse-trigger" tabindex="0">
               <span class="heading h6">body</span>
               <span class="collapse__marker">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus"
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="nav__item" tabindex="0">
-            <p class="nav__item__label" tabindex="0">
+            <p class="item__label" tabindex="0">
               <span class="heading h6">hair</span>
               <span class="collapse__marker">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus"
@@ -93,7 +93,7 @@
             </p>
           </div>
           <div class="nav__item" tabindex="0">
-            <p class="nav__item__label" tabindex="0">
+            <p class="item__label" tabindex="0">
               <span class="heading h6">kits</span>
               <span class="collapse__marker">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus"
@@ -109,7 +109,7 @@
             </p>
           </div>
           <div class="nav__item" tabindex="0">
-            <p class="nav__item__label" tabindex="0">
+            <p class="item__label" tabindex="0">
               <span class="heading h6">accessories</span>
               <span class="collapse__marker">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus"
@@ -125,7 +125,7 @@
             </p>
           </div>
           <div class="nav__item" tabindex="0">
-            <p class="nav__item__label" tabindex="0">
+            <p class="item__label" tabindex="0">
               <span class="heading h6">journal</span>
               <span class="collapse__marker">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus"
@@ -192,15 +192,15 @@
   <!-- HEADER -->
   <header class="header">
     <nav class="header__nav">
-      <ul class="header__nav__list is-left">
-        <li class="header__nav__listitem"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="header__nav__listitem"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="header__nav__listitem"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="header__nav__listitem"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="header__nav__listitem"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="header__nav__listitem"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="header__nav__listitem"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="header__nav__listitem alternate  is-left">
+      <ul class="nav__list is-left">
+        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
+        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
+        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
+        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
+        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
+        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
+        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
+        <li class="nav__item alternate  is-left">
           <span id="sidebar-toggle" class="hamburger">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
               viewBox="0 0 16 16">
@@ -212,8 +212,8 @@
       </ul>
     </nav>
 
-    <div class="header__logo__wrapper">
-      <a href="#" class="header__link heading h8 header__logo__wrapper">
+    <div class="logo__wrapper">
+      <a href="#" class="header__link heading h8 logo__wrapper">
         <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/logo-black_180x@2x.png?v=1594799107" alt=""
           class="header__logo is-black">
         <img
@@ -222,18 +222,18 @@
       </a>
     </div>
     <nav class="header__nav">
-      <ul class="header__nav__list is-nowrap is-right">
-        <li class="header__nav__listitem"><a class="header__link heading h8" href="#">Account</a></li>
-        <li class="header__nav__listitem"><a class="header__link heading h8" href="#">Account</a></li>
-        <li class="header__nav__listitem"><a class="header__link heading h8" href="#">Account</a></li>
-        <li class="header__nav__listitem alternate">
+      <ul class="nav__list is-nowrap is-right">
+        <li class="nav__item"><a class="header__link heading h8" href="#">Account</a></li>
+        <li class="nav__item"><a class="header__link heading h8" href="#">Account</a></li>
+        <li class="nav__item"><a class="header__link heading h8" href="#">Account</a></li>
+        <li class="nav__item alternate">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
             viewBox="0 0 16 16">
             <path
               d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
           </svg>
         </li>
-        <li class="header__nav__listitem alternate">
+        <li class="nav__item alternate">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag"
             viewBox="0 0 16 16">
             <path
@@ -298,7 +298,7 @@
       <div class="container has-inline-list">
         <div class="container product__wrapper">
           <div class="product is-inline">
-            <div class="product__image__wrapper">
+            <div class="image__wrapper">
               <a href="#" class="product__url img__container is-fullwidth">
                 <img
                   src="https://cdn.shopify.com/s/files/1/0019/4769/7211/products/Brazilian-Supermask-Face-Masque-Packaging_1200x.jpg?v=1594629794"
@@ -314,7 +314,7 @@
         </div>
         <div class="container product__wrapper">
           <div class="product is-inline">
-            <div class="product__image__wrapper">
+            <div class="image__wrapper">
               <a href="#" class="product__url img__container is-fullwidth">
                 <img
                   src="https://cdn.shopify.com/s/files/1/0019/4769/7211/products/Brazilian-Supermask-Face-Masque-Packaging_1200x.jpg?v=1594629794"
@@ -330,7 +330,7 @@
         </div>
         <div class="container product__wrapper">
           <div class="product is-inline">
-            <div class="product__image__wrapper">
+            <div class="image__wrapper">
               <a href="#" class="product__url img__container is-fullwidth">
                 <img
                   src="https://cdn.shopify.com/s/files/1/0019/4769/7211/products/Brazilian-Supermask-Face-Masque-Packaging_1200x.jpg?v=1594629794"
@@ -346,7 +346,7 @@
         </div>
         <div class="container product__wrapper">
           <div class="product is-inline">
-            <div class="product__image__wrapper">
+            <div class="image__wrapper">
               <a href="#" class="product__url img__container is-fullwidth">
                 <img
                   src="https://cdn.shopify.com/s/files/1/0019/4769/7211/products/Brazilian-Supermask-Face-Masque-Packaging_1200x.jpg?v=1594629794"
@@ -381,7 +381,7 @@
     <div class="section__body container">
       <div class="product is-large has-fullcontent">
         <div class="product__img">
-          <div class="product__image__wrapper container">
+          <div class="image__wrapper container">
             <a href="#" class="block img__container is-fullwidth">
               <div class="img__container is-fullwidth">
                 <img
@@ -391,7 +391,7 @@
             </a>
           </div>
         </div>
-        <div class="container product__info__container">
+        <div class="container info__container">
 
           <div class="product__info">
             <div class="">
@@ -445,7 +445,7 @@
               add to card
             </a>
           </div>
-          <div class=" product__link__wrapper">
+          <div class=" link__wrapper">
             <a href="#">view product details</a>
           </div>
 
@@ -525,7 +525,7 @@
         </header>
         <div class="shop-the-look__main">
           <div class="product" aria-hidden="true">
-            <div class="product__image__wrapper">
+            <div class="image__wrapper">
               <a href="#" class="product__url img__container">
                 <img
                   src="https://cdn.shopify.com/s/files/1/0019/4769/7211/products/Brazilian-Supermask-Face-Masque-Packaging_1200x.jpg?v=1594629794"
@@ -533,7 +533,7 @@
               </a>
             </div>
             <div class="product__info">
-              <a class="title title--xsmall product__title product__title__link" href="#">Egyptian honey rose masque</a>
+              <a class="title title--xsmall product__title " href="#">Egyptian honey rose masque</a>
               <span class="title title--small product__price hover--vertical--raising"> $52 </span>
             </div>
           </div>
@@ -553,8 +553,8 @@
   <section class="section has-pad timeline-section">
     <div class="timeline timeline-section__body ">
       <div class="timeline__list container has-inline-list">
-        <div class="block is-inline timeline__item__wrapper is-selected">
-          <div class="img__container has-bg-img has-backdrop timeline__img__wrapper">
+        <div class="block is-inline item__wrapper is-selected">
+          <div class="img__container has-bg-img has-backdrop image__wrapper">
             <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/timeline-story_x650.jpg?v=1594798996"
               alt="" class="img is-fixed is-fullscreen">
           </div>
@@ -574,8 +574,8 @@
             </p>
           </div>
         </div>
-        <div class="block is-inline timeline__item__wrapper">
-          <div class="img__container has-bg-img has-backdrop timeline__img__wrapper">
+        <div class="block is-inline item__wrapper">
+          <div class="img__container has-bg-img has-backdrop image__wrapper">
             <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/timeline-story_x650.jpg?v=1594798996"
               alt="" class="img is-fixed is-fullscreen">
           </div>
@@ -595,8 +595,8 @@
             </p>
           </div>
         </div>
-        <div class="block is-inline timeline__item__wrapper">
-          <div class="img__container has-bg-img has-backdrop timeline__img__wrapper">
+        <div class="block is-inline item__wrapper">
+          <div class="img__container has-bg-img has-backdrop image__wrapper">
             <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/timeline-story_x650.jpg?v=1594798996"
               alt="" class="img is-fixed is-fullscreen">
           </div>
@@ -646,7 +646,7 @@
     <div class="section__body container">
       <div class="product is-large has-fullcontent">
         <div class="product__img">
-          <div class="product__image__wrapper container">
+          <div class="image__wrapper container">
             <a href="#" class="block img__container is-fullwidth">
               <div class="img__container is-fullwidth">
                 <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/products/gift-card_900x.png?v=1594629761"
@@ -655,7 +655,7 @@
             </a>
           </div>
         </div>
-        <div class="product__info__container">
+        <div class="info__container">
           <div class="product__info">
             <div class="">
               <h2 class="heading is-header is-reversed h2 ">
@@ -682,7 +682,7 @@
               add to card
             </a>
           </div>
-          <div class="container product__link__wrapper">
+          <div class="container link__wrapper">
             <a href="#">view product details</a>
           </div>
 
@@ -702,7 +702,7 @@
     </div>
     <div class="section__body container article-section__body">
       <article class="article">
-        <div class="article__img__wrapper">
+        <div class="image__wrapper">
           <a href="#">
             <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/articles/clean-brushes_700x.jpg?v=1594629600"
               class="img is-fixed is-fullwidth" alt="">
@@ -722,7 +722,7 @@
       </article>
 
       <article class="article">
-        <div class="article__img__wrapper">
+        <div class="image__wrapper">
           <a href="#">
             <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/articles/clean-brushes_700x.jpg?v=1594629600"
               class="img is-fixed is-fullwidth" alt="">
@@ -750,7 +750,7 @@
   <!-- SLOGAN -->
   <section class="section slogan-section">
     <div class="section__body slogan-section__body block has-bg-img">
-      <div class="img__container is-fullheight is-fullwidth slogan-section__img__wrapper">
+      <div class="img__container is-fullheight is-fullwidth image__wrapper">
         <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/photo-parallax_1500x.jpg?v=1594799078" alt=""
           class="img is-fullwidth is-fullheight">
       </div>
@@ -854,7 +854,7 @@
           <p>
             Subscribe to receive updates, access to exclusive deals, and more.
           </p>
-          <form class="footer__newsletter__form">
+          <form class="newsletter__form">
             <input type="text" class="input formfield" name="email" id="email">
             <button class="btn is-small is-secondary is-eff-a formfield" type="submit">
               subscribe
