--- a/src/index.html
+++ b/src/index.html
@@ -286,10 +286,10 @@
     <header class="section__header">
       <h3 class="heading is-sub-header h6">For your skin</h3>
       <p class="heading is-header h1">
-        <button class="btn is-small is-eff-b ">
+        <button class="btn is-eff-b ">
           Masques
         </button>
-        <button class="btn is-small is-eff-b">
+        <button class="btn is-eff-b">
           Lips
         </button>
       </p>
@@ -516,7 +516,7 @@
         </div>
       </div>
 
-      <div class="shop-the-look__info container">
+      <div class="shop-the-look__info">
         <header class="">
           <span class="exit-look-mode">
             X
@@ -539,7 +539,7 @@
           </div>
 
           <div class="shop-the-look__footer">
-            <button class="btn is-small is-eff-a is-cta is-secondary is-fullwidth">
+            <button class="btn is-small is-eff-a is-cta is-secondary">
               View products
             </button>
           </div>
