SLIDE_EFF_BACKUP

--- a/src/index.html
+++ b/src/index.html
@@ -247,7 +247,7 @@
   <!-- HERO -->
   <section class="section is-fullscreen is-hero">
     <div class="section__body is-fullscreen">
-      <div class="slideshow__container is-fullscreen has-backdrop has-blur-effect">
+      <div class="slideshow__container has-overlay is-fullscreen has-backdrop">
         <div class="slide is-fullscreen">
           <div class="img__container is-fullscreen has-backdrop">
             <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/slideshow-03_2000x.jpg?v=1594798650" alt=""
@@ -265,8 +265,8 @@
         </div>
         <div class="slide is-fullscreen has-center">
           <div class="img__container is-fullscreen has-backdrop">
-            <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/slideshow-03_2000x.jpg?v=1594798650" alt=""
-              class="img is-fixed is-hero">
+            <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/slideshow-01-mobile_x800.jpg?v=1594798709"
+              alt="" class="img is-fixed is-hero">
           </div>
           <div class="slide__content is-fullwidth is-center is-eff-a">
             <h3 class="heading is-sub-header h6">
@@ -457,13 +457,13 @@
   <!-- SLIDE SHOW -->
   <section class="section">
     <div class="slideshow__container category-slideshow is-fullscreen">
-      <div class="slide is-fullscreen collection">
+      <div class="slide test is-fullscreen collection">
         <div class="block img__container has-hover-scaling has-backdrop has-bg-img is-fullheight">
           <img
             src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_750x750_crop_center.jpg?v=1594627276%20750w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1000x.jpg?v=1594627276%201000w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1500x.jpg?v=1594627276%201500w"
             alt="" class="img is-fullheight is-fullwidth" />
         </div>
-        <div class="slide__content container is-bottom is-eff-a">
+        <div class="slide__content container is-bottom is-eff-a is-animated">
           <h2 class="heading is-sub-header h1">Skin care</h2>
           <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
         </div>
@@ -471,10 +471,10 @@
       <div class="slide is-fullscreen collection">
         <div class="block img__container has-backdrop has-bg-img is-fullheight">
           <img
-            src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_750x750_crop_center.jpg?v=1594627276%20750w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1000x.jpg?v=1594627276%201000w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1500x.jpg?v=1594627276%201500w"
+            src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-hair_750x750_crop_center.jpg?v=1594627540"
             alt="" class="img is-fullheight is-fullwidth" />
         </div>
-        <div class="slide__content container is-bottom is-eff-a">
+        <div class="slide__content container is-bottom is-eff-a is-animated">
           <h2 class="heading is-sub-header h1">Skin care</h2>
           <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
         </div>
@@ -482,10 +482,32 @@
       <div class="slide is-fullscreen collection">
         <div class="block img__container has-backdrop has-bg-img is-fullheight">
           <img
-            src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_750x750_crop_center.jpg?v=1594627276%20750w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1000x.jpg?v=1594627276%201000w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1500x.jpg?v=1594627276%201500w"
+            src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-kits_750x750_crop_center.jpg?v=1594627153"
             alt="" class="img is-fullheight is-fullwidth" />
         </div>
-        <div class="slide__content container is-bottom is-eff-a">
+        <div class="slide__content container is-bottom is-eff-a is-animated">
+          <h2 class="heading is-sub-header h1">Skin care</h2>
+          <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
+        </div>
+      </div>
+      <div class="slide is-fullscreen collection">
+        <div class="block img__container has-backdrop has-bg-img is-fullheight">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-accessories_750x750_crop_center.jpg?v=1594627432"
+            alt="" class="img is-fullheight is-fullwidth" />
+        </div>
+        <div class="slide__content container is-bottom is-eff-a is-animated">
+          <h2 class="heading is-sub-header h1">Skin care</h2>
+          <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
+        </div>
+      </div>
+      <div class="slide is-fullscreen collection">
+        <div class="block img__container has-backdrop has-bg-img is-fullheight">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/collection-body-home_750x960_crop_center.jpg?v=1594803563"
+            alt="" class="img is-fullheight is-fullwidth" />
+        </div>
+        <div class="slide__content container is-bottom is-eff-a is-animated">
           <h2 class="heading is-sub-header h1">Skin care</h2>
           <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
         </div>
@@ -504,7 +526,7 @@
     </header>
     <main class="section__body container shop-the-look">
       <div class="shop-the-look__item">
-        <div class="block has-bg-img is-fullheight has-backdrop shop-the-look__img">
+        <div class="img__container is-fullheight shop-the-look__img has-aspect-ratio">
           <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/shop-hair_700x.progressive.jpg?v=1594801444"
             alt="" class="img is-fullheight">
           <label title="View product" for="toggle-view" style="top: 60%; left:20%" class="image__link-anchor">
@@ -750,7 +772,9 @@
   <!-- SLOGAN -->
   <section class="section slogan-section">
     <div class="section__body slogan-section__body block has-bg-img">
-      <div class="img__container is-fullheight is-fullwidth image__wrapper">
+      <div
+        style="background-image: url('https://cdn.shopify.com/s/files/1/0019/4769/7211/files/photo-parallax_1500x.jpg?v=1594799078');"
+        class="img__container has-bg-img is-paralax is-fullheight is-fullwidth image__wrapper">
         <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/photo-parallax_1500x.jpg?v=1594799078" alt=""
           class="img is-fullwidth is-fullheight">
       </div>
