--- a/src/index.html
+++ b/src/index.html
@@ -191,57 +191,111 @@
 
   <!-- HEADER -->
   <header class="header">
-    <nav class="header__nav">
-      <ul class="nav__list is-left">
-        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="nav__item"><a href="#" class="header__link heading h8">skincare</a></li>
-        <li class="nav__item alternate  is-left">
-          <span id="sidebar-toggle" class="hamburger">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+    <div class="nav__wrapper">
+      <nav class="header__nav">
+        <ul class="nav__list">
+          <li class="nav__item is-left"><a class="header__link heading h8">$USD</a></li>
+          <li class="nav__item alternate  is-left">
+            <span id="sidebar-toggle" class="hamburger">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+                viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                  d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+              </svg>
+            </span>
+          </li>
+        </ul>
+      </nav>
+      <div class="logo__wrapper">
+        <a href="#" class="header__link heading h8 logo__wrapper">
+          <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/logo-black_180x@2x.png?v=1594799107" alt=""
+            class="header__logo is-black">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/logo-white_05bc7f5d-6f90-4d29-981b-2bc2879ece67_180x@2x.png?v=1594799140"
+            alt="" class="header__logo is-white">
+        </a>
+      </div>
+      <nav class="header__nav">
+        <ul class="nav__list is-nowrap is-right">
+          <li class="nav__item"><a class="header__link heading h8" href="#">Account</a></li>
+          <li class="nav__item"><a class="header__link heading h8" href="#">Account</a></li>
+          <li class="nav__item"><a class="header__link heading h8" href="#">Account</a></li>
+          <li class="nav__item is-right alternate">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
               viewBox="0 0 16 16">
-              <path fill-rule="evenodd"
-                d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+              <path
+                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
             </svg>
-          </span>
-        </li>
-      </ul>
-    </nav>
-
-    <div class="logo__wrapper">
-      <a href="#" class="header__link heading h8 logo__wrapper">
-        <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/logo-black_180x@2x.png?v=1594799107" alt=""
-          class="header__logo is-black">
-        <img
-          src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/logo-white_05bc7f5d-6f90-4d29-981b-2bc2879ece67_180x@2x.png?v=1594799140"
-          alt="" class="header__logo is-white">
-      </a>
+          </li>
+          <li class="nav__item is-right alternate">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag"
+              viewBox="0 0 16 16">
+              <path
+                d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z" />
+            </svg>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <nav class="header__nav">
-      <ul class="nav__list is-nowrap is-right">
-        <li class="nav__item"><a class="header__link heading h8" href="#">Account</a></li>
-        <li class="nav__item"><a class="header__link heading h8" href="#">Account</a></li>
-        <li class="nav__item"><a class="header__link heading h8" href="#">Account</a></li>
-        <li class="nav__item alternate">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
-            viewBox="0 0 16 16">
-            <path
-              d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-          </svg>
-        </li>
-        <li class="nav__item alternate">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag"
-            viewBox="0 0 16 16">
-            <path
-              d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z" />
-          </svg>
-        </li>
-      </ul>
-    </nav>
+
+    <div class="nav__wrapper has-one-child">
+      <nav class="header__nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#" class="header__link heading h8">skincare</a>
+            <div class="pop-menu">
+              <div class="pop-menu__main">
+                <div class="pop-menu__column">
+                  <ul class="nav__list">
+                    <li class="nav__item"><a class="header__link heading h8" href="#">Skincare</a></li>
+                    <li class="nav__item"><a class="header__link is-normalcase" href="#">Masques</a></li>
+                    <li class="nav__item"><a class="header__link is-normalcase" href="#">After masque</a></li>
+                    <li class="nav__item"><a class="header__link is-normalcase" href="#">lips</a></li>
+                    <li class="nav__item"><a class="header__link is-normalcase" href="#">shop all</a></li>
+                  </ul>
+                </div>
+                <div class="pop-menu__column">
+                  <div class="pop-menu__item">
+                    <div class="img__container">
+                      <img
+                        src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/body-oils_370x230@2x.jpg?v=1594799633"
+                        alt="" class="img is-fullwidth">
+                    </div>
+                    <h2 class="heading h7">
+                      body oils
+                    </h2>
+                    <h2 class="heading h7">
+                      discover the gold
+                    </h2>
+                  </div>
+                  <div class="pop-menu__item">
+                    <div class="img__container">
+                      <img
+                        src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/body-oils_370x230@2x.jpg?v=1594799633"
+                        alt="" class="img is-fullwidth">
+                    </div>
+                    <h2 class="heading h7">
+                      body oils
+                    </h2>
+                    <h2 class="heading h7">
+                      discover the gold
+                    </h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="nav__item"><a href="#" class="header__link heading h8">body</a></li>
+          <li class="nav__item"><a href="#" class="header__link heading h8">hair</a></li>
+          <li class="nav__item"><a href="#" class="header__link heading h8">kits</a></li>
+          <li class="nav__item"><a href="#" class="header__link heading h8">accessories</a></li>
+          <li class="nav__item"><a href="#" class="header__link heading h8">about</a></li>
+          <li class="nav__item"><a href="#" class="header__link heading h8">journal</a></li>
+        </ul>
+      </nav>
+    </div>
+
+
   </header>
 
   <!-- HERO -->
@@ -253,7 +307,7 @@
             <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/slideshow-03_2000x.jpg?v=1594798650" alt=""
               class="img is-fixed is-hero">
           </div>
-          <div class="slide__content is-fullwidth is-bottom is-eff-a">
+          <div class="slide__content has-raise-effect is-fullwidth is-bottom is-eff-a">
             <h3 class="heading is-sub-header h6">
               body
             </h3>
@@ -268,7 +322,7 @@
             <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/slideshow-01-mobile_x800.jpg?v=1594798709"
               alt="" class="img is-fixed is-hero">
           </div>
-          <div class="slide__content is-fullwidth is-center is-eff-a">
+          <div class="slide__content has-raise-effect is-for-center is-fullwidth is-center is-eff-a">
             <h3 class="heading is-sub-header h6">
               body
             </h3>
@@ -296,7 +350,7 @@
     </header>
     <main class="section__body">
       <div class="container has-inline-list">
-        <div class="container product__wrapper">
+        <div class="product__wrapper">
           <div class="product is-inline">
             <div class="image__wrapper">
               <a href="#" class="product__url img__container is-fullwidth">
@@ -312,7 +366,7 @@
             </div>
           </div>
         </div>
-        <div class="container product__wrapper">
+        <div class="product__wrapper">
           <div class="product is-inline">
             <div class="image__wrapper">
               <a href="#" class="product__url img__container is-fullwidth">
@@ -328,7 +382,7 @@
             </div>
           </div>
         </div>
-        <div class="container product__wrapper">
+        <div class="product__wrapper">
           <div class="product is-inline">
             <div class="image__wrapper">
               <a href="#" class="product__url img__container is-fullwidth">
@@ -344,7 +398,7 @@
             </div>
           </div>
         </div>
-        <div class="container product__wrapper">
+        <div class="product__wrapper">
           <div class="product is-inline">
             <div class="image__wrapper">
               <a href="#" class="product__url img__container is-fullwidth">
@@ -515,7 +569,7 @@
     </div>
   </section>
   <!-- DISCOVER OUR RANGE -->
-  <section class="section has-pad shop-the-look">
+  <section class="section has-pad shop-the-look has-border-bottom">
     <header class="section__header feature--image--only__header">
       <h3 class="heading is-sub-header h6">
         Hair
@@ -572,13 +626,13 @@
   </section>
 
   <!-- TIMELINE -->
-  <section class="section has-pad timeline-section">
+  <section class="section has-pad timeline-section has-border-bottom">
     <div class="timeline timeline-section__body ">
-      <div class="timeline__list container has-inline-list">
-        <div class="block is-inline item__wrapper is-selected">
+      <div class="timeline__list container slideshow__container has-inline-list">
+        <div class="block is-fullwidth slide is-inline item__wrapper">
           <div class="img__container has-bg-img has-backdrop image__wrapper">
             <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/timeline-story_x650.jpg?v=1594798996"
-              alt="" class="img is-fixed is-fullscreen">
+              alt="" class="img is-fixed is-fullheight is-fullwidth">
           </div>
           <div class="timeline__content has-raise-effect">
             <h3 class="heading is-sub-header h6">
@@ -596,52 +650,49 @@
             </p>
           </div>
         </div>
-        <div class="block is-inline item__wrapper">
+        <div class="block slide is-fullwidth is-inline item__wrapper">
           <div class="img__container has-bg-img has-backdrop image__wrapper">
-            <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/timeline-story_x650.jpg?v=1594798996"
-              alt="" class="img is-fixed is-fullscreen">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/timeline-inspiration_1000x.jpg?v=1594799009"
+              alt="" class="img is-fixed is-fullheight is-fullwidth">
           </div>
           <div class="timeline__content has-raise-effect">
             <h3 class="heading is-sub-header h6">
-              accent wisdom
+              Explore the world
             </h3>
             <h2 class="heading is-header h1">
-              modern performance
+              to be inspried
             </h2>
             <p class="timeline__desc desc is-medium">
-              We lovingly create products that will complement and enhance the daily self-care ritual, using
-              only the
-              highest quality active ingredients and botanicals that are effective, high-performance and
-              always
-              non-toxic.
+              We are explorers, dreamers and makers. We travel the world in search of stories and transform them into
+              beautifully designed and culturally inspired skincare.We take you all over the world, from tropical
+              islands to the icy coast of British Columbia, from Asia to South America and North Africa.
             </p>
           </div>
         </div>
-        <div class="block is-inline item__wrapper">
+        <div class="block slide is-fullwidth is-inline item__wrapper">
           <div class="img__container has-bg-img has-backdrop image__wrapper">
-            <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/timeline-story_x650.jpg?v=1594798996"
-              alt="" class="img is-fixed is-fullscreen">
+            <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/timeline-quality-2_1000x.jpg?v=1594799025"
+              alt="" class="img is-fixed is-fullheight is-fullwidth">
           </div>
           <div class="timeline__content has-raise-effect">
             <h3 class="heading is-sub-header h6">
-              accent wisdom
+              natural
             </h3>
             <h2 class="heading is-header h1">
-              modern performance
+              our guarantee
             </h2>
             <p class="timeline__desc desc is-medium">
-              We lovingly create products that will complement and enhance the daily self-care ritual, using
-              only the
-              highest quality active ingredients and botanicals that are effective, high-performance and
-              always
-              non-toxic.
+              Our products are 99.5-100% natural. We always aim to have our products as natural as they can be, never
+              compromising on quality and effectiveness of the product. Each product is infused with the elements of
+              aroma, memory, place and beauty traditions from across the globe.
             </p>
           </div>
         </div>
       </div>
-      <div class="timeline__tab">
+      <div class="timeline__tab  has-border-bottom">
         <!-- <div class="timeline__tabitem is-focus"> -->
-        <div class="is-focus timeline__tabitem btn is-small is-fullheight is-eff-b">
+        <div class="is-selected timeline__tabitem btn is-small is-fullheight is-eff-b">
           story
         </div>
         <!-- </div> -->
@@ -653,8 +704,8 @@
         </div>
       </div>
     </div>
-
   </section>
+
   <!-- GIFT -->
   <section class="section has-pad">
     <div class="section__header">
