--- a/src/index.html
+++ b/src/index.html
@@ -300,7 +300,7 @@
 
   <!-- HERO -->
   <section class="section is-fullscreen is-hero">
-    <div class="section__body is-fullscreen">
+    <div class="section__body is-fullscreen hero-slideshow">
       <div class="slideshow__container has-overlay is-fullscreen has-backdrop">
         <div class="slide is-fullscreen">
           <div class="img__container is-fullscreen has-backdrop">
@@ -333,6 +333,14 @@
           </div>
         </div>
       </div>
+      <ul class="hero-nav slide__nav">
+        <li class="slide__navitem">
+
+        </li>
+        <li class="slide__navitem">
+
+        </li>
+      </ul>
     </div>
   </section>
   <!-- FOR YOUR SKIN -->
@@ -509,64 +517,79 @@
   </section>
 
   <!-- SLIDE SHOW -->
-  <section class="section">
-    <div class="slideshow__container category-slideshow is-fullscreen">
-      <div class="slide test is-fullscreen collection">
-        <div class="block img__container has-hover-scaling has-backdrop has-bg-img is-fullheight">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_750x750_crop_center.jpg?v=1594627276%20750w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1000x.jpg?v=1594627276%201000w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1500x.jpg?v=1594627276%201500w"
-            alt="" class="img is-fullheight is-fullwidth" />
+  <section class="section collection-list">
+    <div class="section__body has-slideshow">
+      <div class="slideshow__container category-slideshow is-fullscreen">
+        <div class="slide test is-fullscreen collection">
+          <div class="block img__container has-hover-scaling has-backdrop has-bg-img is-fullheight">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_750x750_crop_center.jpg?v=1594627276%20750w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1000x.jpg?v=1594627276%201000w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1500x.jpg?v=1594627276%201500w"
+              alt="" class="img is-fullheight is-fullwidth" />
+          </div>
+          <div class="slide__content container is-bottom is-eff-a is-animated">
+            <h2 class="heading is-sub-header h1">Skin care</h2>
+            <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
+          </div>
         </div>
-        <div class="slide__content container is-bottom is-eff-a is-animated">
-          <h2 class="heading is-sub-header h1">Skin care</h2>
-          <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
+        <div class="slide is-fullscreen collection">
+          <div class="block img__container has-backdrop has-bg-img is-fullheight">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-hair_750x750_crop_center.jpg?v=1594627540"
+              alt="" class="img is-fullheight is-fullwidth" />
+          </div>
+          <div class="slide__content container is-bottom is-eff-a is-animated">
+            <h2 class="heading is-sub-header h1">Skin care</h2>
+            <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
+          </div>
+        </div>
+        <div class="slide is-fullscreen collection">
+          <div class="block img__container has-backdrop has-bg-img is-fullheight">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-kits_750x750_crop_center.jpg?v=1594627153"
+              alt="" class="img is-fullheight is-fullwidth" />
+          </div>
+          <div class="slide__content container is-bottom is-eff-a is-animated">
+            <h2 class="heading is-sub-header h1">Skin care</h2>
+            <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
+          </div>
+        </div>
+        <div class="slide is-fullscreen collection">
+          <div class="block img__container has-backdrop has-bg-img is-fullheight">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-accessories_750x750_crop_center.jpg?v=1594627432"
+              alt="" class="img is-fullheight is-fullwidth" />
+          </div>
+          <div class="slide__content container is-bottom is-eff-a is-animated">
+            <h2 class="heading is-sub-header h1">Skin care</h2>
+            <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
+          </div>
+        </div>
+        <div class="slide is-fullscreen collection">
+          <div class="block img__container has-backdrop has-bg-img is-fullheight">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/collection-body-home_750x960_crop_center.jpg?v=1594803563"
+              alt="" class="img is-fullheight is-fullwidth" />
+          </div>
+          <div class="slide__content container is-bottom is-eff-a is-animated">
+            <h2 class="heading is-sub-header h1">Skin care</h2>
+            <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
+          </div>
         </div>
       </div>
-      <div class="slide is-fullscreen collection">
-        <div class="block img__container has-backdrop has-bg-img is-fullheight">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-hair_750x750_crop_center.jpg?v=1594627540"
-            alt="" class="img is-fullheight is-fullwidth" />
-        </div>
-        <div class="slide__content container is-bottom is-eff-a is-animated">
-          <h2 class="heading is-sub-header h1">Skin care</h2>
-          <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
-        </div>
-      </div>
-      <div class="slide is-fullscreen collection">
-        <div class="block img__container has-backdrop has-bg-img is-fullheight">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-kits_750x750_crop_center.jpg?v=1594627153"
-            alt="" class="img is-fullheight is-fullwidth" />
-        </div>
-        <div class="slide__content container is-bottom is-eff-a is-animated">
-          <h2 class="heading is-sub-header h1">Skin care</h2>
-          <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
-        </div>
-      </div>
-      <div class="slide is-fullscreen collection">
-        <div class="block img__container has-backdrop has-bg-img is-fullheight">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-accessories_750x750_crop_center.jpg?v=1594627432"
-            alt="" class="img is-fullheight is-fullwidth" />
-        </div>
-        <div class="slide__content container is-bottom is-eff-a is-animated">
-          <h2 class="heading is-sub-header h1">Skin care</h2>
-          <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
-        </div>
-      </div>
-      <div class="slide is-fullscreen collection">
-        <div class="block img__container has-backdrop has-bg-img is-fullheight">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/collection-body-home_750x960_crop_center.jpg?v=1594803563"
-            alt="" class="img is-fullheight is-fullwidth" />
-        </div>
-        <div class="slide__content container is-bottom is-eff-a is-animated">
-          <h2 class="heading is-sub-header h1">Skin care</h2>
-          <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
-        </div>
-      </div>
+      <ul class="hero-nav slide__nav">
+        <li class="slide__navitem">
+        </li>
+        <li class="slide__navitem">
+        </li>
+        <li class="slide__navitem">
+        </li>
+        <li class="slide__navitem">
+        </li>
+        <li class="slide__navitem">
+        </li>
+      </ul>
     </div>
+
   </section>
   <!-- DISCOVER OUR RANGE -->
   <section class="section has-pad shop-the-look has-border-bottom">
