add post-css and autoprefixer

--- a/src/index.html
+++ b/src/index.html
@@ -602,7 +602,7 @@
       </h2>
     </header>
     <main class="section__body container shop-the-look">
-      <div class="shop-the-look__item">
+      <div class="shop-the-look__item" id="effect-test">
         <div class="img__container is-fullheight shop-the-look__img has-aspect-ratio">
           <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/shop-hair_700x.progressive.jpg?v=1594801444"
             alt="" class="img is-fullheight">
@@ -638,7 +638,7 @@
           </div>
 
           <div class="shop-the-look__footer">
-            <button class="btn is-small is-eff-a is-cta is-secondary">
+            <button id="eff-toggle-test" class="btn is-small is-eff-a is-cta is-secondary">
               View products
             </button>
           </div>
