--- a/src/index.html
+++ b/src/index.html
@@ -300,9 +300,9 @@
 
   <!-- HERO -->
   <section class="section is-fullscreen is-hero">
-    <div class="section__body is-fullscreen hero-slideshow">
-      <div class="slideshow__container has-overlay is-fullscreen has-backdrop">
-        <div class="slide is-fullscreen">
+    <div class="section__body swiper-container is-fullscreen hero-slideshow slideshow__container has-fade-effect">
+      <div class="swiper-wrapper has-fade-effect is-fullscreen has-backdrop">
+        <div class="slide is-fullscreen swiper-slide">
           <div class="img__container is-fullscreen has-backdrop">
             <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/slideshow-03_2000x.jpg?v=1594798650" alt=""
               class="img is-fixed is-hero">
@@ -317,10 +317,10 @@
             <a class="btn is-small is-eff-a is-cta">discover products</a>
           </div>
         </div>
-        <div class="slide is-fullscreen has-center">
+        <div class="slide is-fullscreen swiper-slide has-center">
           <div class="img__container is-fullscreen has-backdrop">
-            <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/slideshow-01-mobile_x800.jpg?v=1594798709"
-              alt="" class="img is-fixed is-hero">
+            <img src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/slideshow-01_2200x.jpg?v=1594798697" alt=""
+              class="img is-fixed is-hero">
           </div>
           <div class="slide__content has-raise-effect is-for-center is-fullwidth is-center is-eff-a">
             <h3 class="heading is-sub-header h6">
@@ -333,7 +333,7 @@
           </div>
         </div>
       </div>
-      <ul class="hero-nav slide__nav">
+      <ul class="hero-nav slide__nav swiper-pagination">
         <li class="slide__navitem">
 
         </li>
@@ -518,9 +518,9 @@
 
   <!-- SLIDE SHOW -->
   <section class="section collection-list">
-    <div class="section__body has-slideshow">
-      <div class="slideshow__container category-slideshow is-fullscreen">
-        <div class="slide test is-fullscreen collection">
+    <div class="section__body has-slideshow swiper-container">
+      <div class="slideshow__container swiper-wrapper category-slideshow is-fullscreen">
+        <div class="slide swiper-slide test is-fullscreen collection">
           <div class="block img__container has-hover-scaling has-backdrop has-bg-img is-fullheight">
             <img
               src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_750x750_crop_center.jpg?v=1594627276%20750w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1000x.jpg?v=1594627276%201000w,%20//cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-skincare_1500x.jpg?v=1594627276%201500w"
@@ -531,7 +531,7 @@
             <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
           </div>
         </div>
-        <div class="slide is-fullscreen collection">
+        <div class="slide swiper-slide is-fullscreen collection">
           <div class="block img__container has-backdrop has-bg-img is-fullheight">
             <img
               src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-hair_750x750_crop_center.jpg?v=1594627540"
@@ -542,7 +542,7 @@
             <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
           </div>
         </div>
-        <div class="slide is-fullscreen collection">
+        <div class="slide swiper-slide is-fullscreen collection">
           <div class="block img__container has-backdrop has-bg-img is-fullheight">
             <img
               src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-kits_750x750_crop_center.jpg?v=1594627153"
@@ -553,7 +553,7 @@
             <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
           </div>
         </div>
-        <div class="slide is-fullscreen collection">
+        <div class="slide swiper-slide is-fullscreen collection">
           <div class="block img__container has-backdrop has-bg-img is-fullheight">
             <img
               src="https://cdn.shopify.com/s/files/1/0019/4769/7211/collections/collection-accessories_750x750_crop_center.jpg?v=1594627432"
@@ -564,7 +564,7 @@
             <a class="btn is-small is-eff-a is-cta" href="#">view products</a>
           </div>
         </div>
-        <div class="slide is-fullscreen collection">
+        <div class="slide swiper-slide is-fullscreen collection">
           <div class="block img__container has-backdrop has-bg-img is-fullheight">
             <img
               src="https://cdn.shopify.com/s/files/1/0019/4769/7211/files/collection-body-home_750x960_crop_center.jpg?v=1594803563"
@@ -576,7 +576,7 @@
           </div>
         </div>
       </div>
-      <ul class="hero-nav slide__nav">
+      <ul class="hero-nav slide__nav swiper-pagination">
         <li class="slide__navitem">
         </li>
         <li class="slide__navitem">
